package global;

message Notification
{
  required uint64 leader        = 1;
  required uint64 zxid          = 2;
  required uint64 epoch         = 3;
  required uint32 state         = 4;
  required uint64 sid           = 5;
}

service LeaderElection
{
  rpc LeaderProposal(Notification) returns (Notification);
}
